# vamp

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .style.yapf  CITATION.bib  CMakeLists.txt  LICENSE.txt  README.md  _build_backend.py  curve.py  dump  environment.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug-error.md
.github/workflows/: build.yml  format.yml  pypi.yml
cmake/: CompilerSettings.cmake  Dependencies.cmake  EmscriptenBuild.cmake  FetchInitCPM.cmake  JIT.cmake  Python.cmake  WASM.cmake  macros.cmake  vampConfig.cmake.in  vamp_coreConfig.cmake.in
docker/: ubuntu2004.dockerfile  ubuntu2204-conda.dockerfile  ubuntu2204.dockerfile  ubuntu2404.dockerfile
licenses/nigh/: LICENSE
resources/: README.md  problem_tar_to_pkl_json.py  robometrics_to_pkl_json.py
resources/baxter/: baxter.srdf  baxter.urdf  baxter_spherized.urdf  baxter_spherized_1.urdf  problems.tar.bz2
resources/baxter/meshes/base/: pedestal_link_collision_1.stl  pedestal_link_collision_2.stl
resources/baxter/meshes/torso/: base_link_collision_1.stl  base_link_collision_2.stl  base_link_collision_3.stl  base_link_collision_4.stl  base_link_collision_5.stl  base_link_collision_6.stl  base_link_collision_7.stl  base_link_headless.stl
resources/fetch/: fetch.srdf  fetch.urdf  fetch_spherized.urdf  fetch_spherized_1.urdf  problems.tar.bz2
resources/fetch/meshes/: base_link_collision_2.stl  elbow_flex_link_collision_2.stl  forearm_roll_link_collision_2.stl  gripper_link_2.stl  head_pan_link_collision_2.stl  head_tilt_link_collision_2.stl  l_gripper_finger_link_2.stl  r_gripper_finger_link_2.stl  shoulder_lift_link_collision_2.stl  shoulder_pan_link_collision_2.stl  torso_lift_link_split_1.stl  torso_lift_link_split_2.stl  torso_lift_link_split_3.stl  upperarm_roll_link_collision_2.stl  wrist_flex_link_collision_2.stl  wrist_roll_link_collision_2.stl
resources/fr3/: LICENSE  fr3.srdf  fr3.urdf  fr3_spherized.urdf
resources/m900ib400l/: m900ib400l.srdf  m900ib400l_spherized.urdf
resources/panda/: bipanda_spherized.urdf  panda.urdf  panda_spherized.urdf  panda_spherized_1.urdf  problems.tar.bz2
resources/panda/meshes/visual/: link5.mtl
resources/spot/: spot.srdf  spot_spherized.urdf
resources/spotarm/: spotarm_spherized.urdf
resources/stretch/: stretch.srdf  stretch.urdf  stretch_acm.csv  stretch_spherized.urdf  stretch_spherized_sparse.urdf
resources/stretch/meshes/: base_imu_collision.STL  base_link.STL  base_link_collision.STL  laser_collision.STL  laser_collision_old.STL  link_DW3_tablet_12in.STL  link_DW3_tablet_12in_collision.STL  link_DW3_wrist_yaw_bottom_collision.STL  link_SE3_head_nav_cam_collision.STL  link_SE3_head_nav_cam_collision_old.STL  link_SG3_aruco_fingertip_right.STL  link_SG3_gripper_body.STL  link_SG3_gripper_body_collision.STL  link_SG3_gripper_finger_left.STL  link_SG3_gripper_finger_right.STL  link_SG3_gripper_fingertip_left.STL  link_SG3_gripper_fingertip_left_collision.STL  link_arm_l0_collision.STL  link_arm_l1_collision.STL  link_arm_l2_collision.STL  link_arm_l3_collision.STL  link_arm_l4_collision.STL  link_aruco_inner_wrist_collision.STL  link_aruco_right_base_collision.STL  link_aruco_shoulder_collision.STL  link_aruco_top_wrist_collision.STL  link_camera_collision.STL  link_ground_collision.STL  link_head_tilt_collision.STL  link_left_wheel_collision.STL  link_lift_collision.STL  link_right_wheel_collision.STL  link_wrist_yaw_collision.STL  respeaker_base_collision.STL
resources/ur5/: problems.tar.bz2  ur5.srdf  ur5.urdf  ur5_spherized.urdf  ur5_spherized_1.urdf
resources/ur5/meshes/: robotiq_fts300.stl
scripts/: README.md  ao_benchmark.py  attachments.py  bimanual_franka.py  collision_checking.py  convergence_benchmark.py  evaluate_mbm.py  evaluate_mbm_jit.py  filter_point_cloud_capt.py  flying_sphere.py  mesh_test.py  phs.py  random_dance.py  random_samples.py  sdf_example.py  sphere_cage_dance.py  sphere_cage_example.py  sphere_cage_example_capt.py  test_jit_introspection.py  test_jit_parity.py  viser_utils.py  visualize_mbm.py  visualize_ompl.py  visualize_viser.py
scripts/cpp/: README.md  ompl_integration.cc  rrtc_example.cc  sdf_example.cc  sdf_example_manual.cc
src/impl/vamp/: constants.hh  utils.hh  vector.hh
src/impl/vamp/bindings/: baxter.cc  common.hh  environment.cc  fetch.cc  init.hh  init.hh.in  panda.cc  panda_attachment.cc  python.cc  python.cc.in  robot.cc.in  robot_helper.hh  settings.cc  sphere.cc  stretch.cc  ur5.cc
src/impl/vamp/collision/: attachments.hh  capt.hh  cuboid_capsule.hh  cuboid_cuboid.hh  cuboid_polytope.hh  environment.hh  factory.hh  filter.hh  math.hh  polytope_convert.hh  shapes.hh  shapes_iostream.hh  sphere_capsule.hh  sphere_cuboid.hh  sphere_heightfield.hh  sphere_polytope.hh  sphere_sphere.hh  validity.hh
src/impl/vamp/jit/: api.hh  build_paths.hh.in  dynamic_robot.cc  dynamic_robot.hh  embedded_stubs.hh.in  ffi.hh  stub_gen.cc  stub_gen.hh
src/impl/vamp/optimization/: project.hh
src/impl/vamp/planning/: aorrtc.hh  aorrtc_settings.hh  aox_nn.hh  fcit.hh  grrtstar.hh  grrtstar_settings.hh  nn.hh  phs.hh  plan.hh  planner.hh  prm.hh  roadmap.hh  rrt_star.hh  rrt_star_settings.hh  rrtc.hh  rrtc_settings.hh  simplify.hh  simplify_settings.hh  utils.hh  validate.hh
src/impl/vamp/random/: distribution.hh  fastrand.hh  halton.hh  rng.hh  uniform.hh  xorshift.hh
src/impl/vamp/robots/: baxter.hh  bimanual_panda.hh  bimanualpanda.hh  fetch.hh  fr3.hh  m20id12l.hh  m900ib400l.hh  panda.hh  panda_attachment.hh  r2000ic125l.hh  r2000ic125l_clean.hh  r2000ic270f.hh  sphere.hh  stretch.hh  ur10e.hh  (+1 more)
src/vamp/: __init__.py  __init__.pyi  constants.py  constants.pyi  disable_rendering.py  disable_rendering.pyi  pointcloud.py  pybullet_interface.py  pybullet_interface.pyi  redirect_stream.py  redirect_stream.pyi  transformations.py  transformations.pyi  typing.py  typing.pyi
src/vamp/_core/: __init__.py
tests/: CMakeLists.txt  test_basic_functionality.cpp  test_collision_math.cc  test_halton.cc  test_robot_interfaces.cpp  test_vector.cc
(+60 files in other folders)
