[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=2.0.0", "cmake >=3.1", "typing_extensions"]
build-backend = "scikit_build_core.build"

[project]
name = "vamp"
version = "0.2"
description = "Vector-Accelerated Motion Planner"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Zachary Kingston", email = "zak@rice.edu" },
    { name = "Wil Thomason", email = "wil.thomason@gmail.com" },
    { name = "Clayton Ramsey", email = "claytonwramsey@gmail.com" }
]
classifiers = [
    "License :: Polyform Noncommercial",
]
dependencies = ["numpy"]

[project.optional-dependencies]
examples = ["fire", "pybullet", "pyyaml", "tqdm", "pandas", "tabulate", "xmltodict"]
heightmaps = ["pillow"]

[project.urls]
Homepage = "https://github.com/KavrakiLab/vamp"

[tool.scikit-build]
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"

cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
VAMP_LTO = "OFF"
# VAMP_FORCE_CLANG = "ON"
