[build-system]
requires = [
    "scikit-build-core >=0.4.3",
    "nanobind >=2.0.0",
    "cmake >=3.1",
    "typing_extensions",
]
build-backend = "_build_backend"
backend-path = ["."]

[project]
name = "vamp-planner"
version = "0.7.0"
description = "Vector-Accelerated Motion Planner"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Zachary Kingston", email = "zkingston@purdue.edu" },
    { name = "Wil Thomason", email = "wil.thomason@gmail.com" },
    { name = "Clayton Ramsey", email = "claytonwramsey@gmail.com" },
]
classifiers = []
dependencies = ["numpy"]

[project.optional-dependencies]
examples = [
    "fire",
    "pybullet",
    "pyyaml",
    "tqdm",
    "pandas",
    "tabulate",
    "xmltodict",
]
heightmaps = ["pillow"]
jit = ["cricket"]

[project.urls]
Homepage = "https://github.com/KavrakiLab/vamp"

[tool.scikit-build]
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"
wheel.packages = ["src/vamp"]

cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
VAMP_LTO = "OFF"
VAMP_BUILD_JIT = "OFF"
VAMP_ROBOT_MODULES = "sphere;ur5;panda;fetch;baxter"
VAMP_ROBOT_STRUCTS = "Sphere;UR5;Panda;Fetch;Baxter"

[[tool.scikit-build.overrides]]
if.env.VAMP_BUILD_JIT = "ON"
cmake.define.VAMP_BUILD_JIT = "ON"
